visibility issue at annexure 2

--- a/css/annexure-2.css
+++ b/css/annexure-2.css
@@ -31,7 +31,12 @@
 
 /* print format */
 
+.visible {
+  display: none;
+}
+
 #printSection {
+  visibility: hidden;
   width: 768px;
   margin: auto;
 }
